wip: mobile nav -testing with fixed bottom row - now changing to it being included in the scrollable section for more visibility of actual links

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,8 @@
 html,
 body,
 :root {
-  height: 100%;
+  height: 100vh;
+  height: 100dvh;
 }
 
 /* body {
